fixed weird issue on mobile

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -282,7 +282,7 @@
 			width:			100%;
 		}
 
-		footer.window {
+		footer {
 			width:			unset;
 		}
 	}
